--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title></title>
 </head>
 <body>
-    <h1><a href="">点击下载简历</a></h1>
+    <h1><a href="/LiuChengYuan-frontend.pdf">点击下载简历</a></h1>
 </body>
 </html>
