--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             p a {
                 color: red;
                 font-weight: bold;
+                text-decoration: underline;
             }
         </style>
     </head>
@@ -83,7 +84,7 @@
         <div id="wrapper">
             <h1>Liu ChengYuan</h1>
             <h2>一个热爱技术的人。</h2>
-            <p><a href="/LiuChengYuan-frontend.pdf">点击下载我的简历</a></p>
+            <p><a href="/LiuChengYuan-frontend.pdf">点击下载我的简历(PDF)</a></p>
         </div>
         <canvas></canvas>
         <script>
