--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
         <div id="wrapper">
             <h1>Liu ChengYuan</h1>
             <h2>一个热爱技术的人。</h2>
+            <h2>email: 836623330@qq.com</h2>
+            <h2><a href="tel:13257978105">phone: 132-5797-8105</a></h2>
             <p><a href="/LiuChengYuan-frontend.pdf">点击下载我的简历(PDF)</a></p>
         </div>
         <canvas></canvas>
