--- a/index.html
+++ b/index.html
@@ -64,19 +64,15 @@
                 height: 100%;
                 pointer-events: none;
             }
-            a {
-                color: #999;
-                text-decoration: none;
-                transition: color .2s ease;
-            }
-            a:hover {
-                color: #42b983;
-                font-size: 1.1em;
-            }
             p a {
+                color: #999;
+                transition: color .2s ease;
                 color: red;
                 font-weight: bold;
-                text-decoration: underline;
+            }
+            p a:hover {
+                color: #42b983;
+                font-size: 1.1em;
             }
         </style>
     </head>
