修改背景颜色

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
             transform:scale(1.1);
         }
 
+        ul {
+            background-color: #fff;
+        }
 
         ul,li{
             padding:0;
@@ -60,9 +63,6 @@
             list-style:none;
         }
 
-        ul{
-            background:rgba(255,100,20,0.6);
-        }
         li{
             text-align:center;
         }
@@ -75,7 +75,6 @@
             text-decoration:none;
         }
         li a:hover{
-            background:red;
             border-radius:5px;
         }
         .hidden{
