--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 
         ul,li{
             margin:0;
-            list-style:none;
         }
 
         li{
@@ -67,9 +66,8 @@
         }
 
         li a{
-            line-height:8vh;
-            font-size:4vh;
-            font-weight:900;
+            line-height:30px;
+            font-size:16px;
             color:#000;
             text-decoration:none;
         }
