--- a/index.html
+++ b/index.html
@@ -5,22 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Nauy Blog</title>
-  <style>
-    ul {
-      margin: 20px auto;
-    }
-
-    ul li {
-      margin: 20px;
-    }
-  </style>
 </head>
 
 <body>
-  <ul>
-    <li><a href="./frontend/index.html">前端</a></li>
-    <li><a href="./java/index.html">java</a></li>
-  </ul>
 </body>
-
-</html>
+<ul>
+  <li><a src="/front/index.html">前端</a></li>
+  <li><a src="/java/index.html">java</a></li>
+</ul </html>
