--- a/index.html
+++ b/index.html
@@ -11,24 +11,38 @@
     <li>frontend<ul>
         <li>css<ul>
             <li><a
-                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs/frontend/html/html5.md">css3.md</a>
+                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/css/css3.md">css3.md</a>
             </li>
-            <li><a href="./docs/frontend/html/html5.md">scss.md</a></li>
+            <li><a
+                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/css/scss.md">scss.md</a>
+            </li>
           </ul>
         </li>
         <li>html<ul>
-            <li>html5.md</li>
+            <li><a
+                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/html/html5.md">html5.md</a>
+            </li>
           </ul>
         </li>
         <li>javascript<ul>
-            <li>javascript.md</li>
-            <li>typescript.md</li>
+            <li><a
+                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/javascript/javascript.md">javascript.md</a>
+            </li>
+            <li><a
+                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/javascript/typescript.md">typescript.md</a>
+            </li>
           </ul>
         </li>
         <li>project_build<ul>
-            <li>babel.md</li>
-            <li>eslint.md</li>
-            <li>webpack.md</li>
+            <li><a
+                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/project_build/babel.md">babel.md</a>
+            </li>
+            <li><a
+                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/project_build/eslint.md">eslint.md</a>
+            </li>
+            <li><a
+                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/project_build/webpack.md">webpack.md</a>
+            </li>
           </ul>
         </li>
       </ul>
@@ -41,7 +55,6 @@
     </li>
     <li>python<ul></ul>
     </li>
-  </ul>
   </ul>
 </body>
 
