--- a/index.html
+++ b/index.html
@@ -1,61 +1,14 @@
+
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
-  <title>home</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs/" />
+  <title>liuchengyuan</title>
 </head>
-
 <body>
-  <ul>
-    <li>frontend<ul>
-        <li>css<ul>
-            <li><a
-                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/css/css3.md">css3.md</a>
-            </li>
-            <li><a
-                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/css/scss.md">scss.md</a>
-            </li>
-          </ul>
-        </li>
-        <li>html<ul>
-            <li><a
-                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/html/html5.md">html5.md</a>
-            </li>
-          </ul>
-        </li>
-        <li>javascript<ul>
-            <li><a
-                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/javascript/javascript.md">javascript.md</a>
-            </li>
-            <li><a
-                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/javascript/typescript.md">typescript.md</a>
-            </li>
-          </ul>
-        </li>
-        <li>project_build<ul>
-            <li><a
-                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/project_build/babel.md">babel.md</a>
-            </li>
-            <li><a
-                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/project_build/eslint.md">eslint.md</a>
-            </li>
-            <li><a
-                href="https://github.com/chengyuan1216/chengyuan1216.github.io/blob/master/docs//frontend/project_build/webpack.md">webpack.md</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </li>
-    <li>java<ul></ul>
-    </li>
-    <li>mysql<ul></ul>
-    </li>
-    <li>others<ul></ul>
-    </li>
-    <li>python<ul></ul>
-    </li>
-  </ul>
+  <ul><li>frontend<ul><li>css<ul><li><a href="frontend/css/css3.md">css3.md</a></li><li><a href="frontend/css/scss.md">scss.md</a></li></ul></li><li>html<ul><li><a href="frontend/html/html5.md">html5.md</a></li></ul></li><li>javascript<ul><li><a href="frontend/javascript/javascript.md">javascript.md</a></li><li><a href="frontend/javascript/typescript.md">typescript.md</a></li></ul></li><li>project_build<ul><li><a href="frontend/project_build/babel.md">babel.md</a></li><li><a href="frontend/project_build/eslint.md">eslint.md</a></li><li><a href="frontend/project_build/webpack.md">webpack.md</a></li></ul></li></ul></li><li>java<ul></ul></li><li>mysql<ul></ul></li><li>others<ul></ul></li><li>python<ul></ul></li></ul>
 </body>
-
 </html>
