--- a/test.html
+++ b/test.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <style>
+      body:active {
+        background: red;
+      }
+     </style>
   </head>
   <body>
     <div title="comment">5 &lt; 7</div>
