--- a/test.html
+++ b/test.html
@@ -1,94 +1,132 @@
-<!doctype html>
+<!DOCTYPE html>
 <html data-framework="vue">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <style>
-      body:active {
-        background: red;
-      }
-     </style>
-  </head>
-  <body>
-    <div class="box1">
-      <div class="content">
-        <div class="div1">1</div>
-        <div class="div2">2</div>
-        <div class="div3">3</div>
-        <div class="div4">4</div>
-        <div class="div5">5</div>
-        <div class="div6">6</div>
-      </div>
-    </div>
-    <style>
-      @keyframes change {
-        20% {
-          transform: rotateY(90deg)  rotateX(90deg);
-        }
-        40% {
-          transform: rotateY(180deg)  rotateX(180deg);
-        }
-        60% {
-          transform: rotateY(270deg)  rotateX(270deg);
-        }
-        80% {
-          transform: rotateY(360deg)  rotateX(360deg);
-        }
-      }
-      .box1 {
-        position:relative;
-        perspective: 3000px;
-        perspective-origin: 100% 100%;
-      }
-      .box1 .content {
-        display: inline-block;
-        width: 200px;
-        height: 200px;
-        perspective-origin: 100% 100%;
-        transform-style: preserve-3d;
-        backface-visibility: visible;
-        transform: rotateY(10deg)  rotateX(10deg);
-        animation: change 8s infinite;
-      }
-      .box1 .content > div {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        line-height: 200px;
-        text-align: center;
-      }
-      .box1 .content > .div1 {
-        transform-origin: left center;
-        transform: translateZ(100px) rotateY(90deg);
-        background: pink;
-      }
-      .box1 .content > .div2 {
-        transform-origin: center;
-        transform: translateZ(-100px);
-        background: gray;
-      }
-      .box1 .content > .div3 {
-        transform-origin: right center;
-        transform: translateZ(100px) rotateY(-90deg);
-        background: orange;
-      }
-      .box1 .content > .div4 {
-        transform-origin: center;
-        transform:  translateZ(100px);
-        background: paleturquoise;
-      }
-      .box1 .content > .div5 {
-        transform-origin: center top;
-        transform: translateZ(100px) rotateX(-90deg);
-        background: antiquewhite;
-      }
-      .box1 .content > .div6 {
-        transform-origin: center bottom;
-        transform: translateZ(100px) rotateX(90deg);
-        background: gold;
-      }
-    </style>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <title></title>
+    </head>
+    <body>
+        <div id="app"></div>
+        <script>
+            function typeOf(obj) {
+                return Object.prototype.toString.call(obj).slice(8, -1);
+            }
+
+            function Observer(data) {
+                const DepMap = new Map();
+                return new Proxy(data, {
+                    set(obj, prop, value) {
+                        // console.log('set', obj, prop, value)
+                        let oldValue = obj[prop];
+                        let newValue = (obj[prop] =
+                            typeOf(value) === 'Object' ? Observer(value) : value);
+                        if (oldValue !== newValue) {
+                            let dep = DepMap.get(prop);
+                            if (dep) {
+                                dep.notify();
+                            }
+                        }
+                    },
+                    get(obj, prop) {
+                        // console.log('get', obj, prop)
+                        if (!DepMap.has(prop) && prop in obj) {
+                            DepMap.set(prop, new Dep());
+                        }
+                        let dep = DepMap.get(prop);
+                        let value = obj[prop];
+                        if (typeOf(value) === 'Object') {
+                            value = Observer(value);
+                        }
+                        if (Dep.target) {
+                            dep.depend(Dep.target);
+                        }
+                        return value;
+                    },
+                    deleteProperty(obj, prop) {
+                        delete obj[prop];
+                        let dep = DepMap.get(prop);
+                        if (dep) {
+                            dep.notify();
+                            DepMap.delete(prop);
+                        }
+                        console.log('deleteProperty', obj, prop);
+                    },
+                });
+            }
+
+            class Dep {
+                constructor() {
+                    this.subscribe = [];
+                }
+                depend(effect) {
+                  if (this.subscribe.indexOf(effect) < 0) {
+                    this.subscribe.push(effect);
+                    effect.depend(this);
+                  }
+                }
+                cancel(effect) {
+                    let index = this.subscribe.indexOf(effect);
+                    if (index > -1) {
+                        this.subscribe.splice(index, 1);
+                    }
+                }
+                notify() {
+                    let arr = this.subscribe.slice();
+                    for (let effect of arr) {
+                        try {
+                            effect.exec();
+                        } catch (e) {
+                            console.error(e);
+                        }
+                    }
+                }
+            }
+            Dep.target = null;
+
+            function effect(callback) {
+                if (typeOf(callback) === 'Function' && !callback._effect) {
+                    const effectObj = {
+                        value: undefined,
+                        deps: [],
+                        depend(dep) {
+                            this.deps.push(dep);
+                        },
+                        cancel() {
+                            this.deps.forEach(dep => {
+                                dep.cancel(this);
+                            });
+                            this.deps = [];
+                        },
+                    };
+                    callback._effect = effectObj;
+                    effectObj.exec = callback;
+                    Dep.target = effectObj;
+                    callback();
+                }
+                return () => {
+                    callback._effect.cancel();
+                    callback._effect = undefined;
+                };
+            }
+            
+            // ==============================
+            function render() {
+              var data = Observer({
+                content: 'hello'
+              })
+
+              var app = document.querySelector('#app')
+              app.innerHTML = `<input id="input"/><div id="content"></div>`
+
+              effect(function setContent() {
+                document.querySelector('#content').innerText = data.content
+              })
+
+              document.querySelector('#input').addEventListener('input', function handleInput(ev) {
+                data.content = ev.target.value
+              })
+            }
+
+            render()
+        </script>
+    </body>
 </html>
